# poco_time_server_client_example

./: .gitignore  CMakeLists.txt  README.md
client/: main.cpp
server/: main.cpp
